--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "marked": "^5.1.0",
     "vue": "^2.5.2"
   },
+  "homepage": "https://github.com/library-components/vue-markdown-reader",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/library-components/vue-markdown-reader"
+  },
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
